[package]
name = "gc9a01"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple driver for the GC9A01 SPI display"
homepage = "https://samjkent.co.uk"
repository = "https://github.com/samjkent/gc9a01"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
embedded-graphics = "0.7.1"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
defmt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
