[package]
name = "gc9a01"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple driver for the GC9A01 SPI display"
homepage = "https://samjkent.co.uk"
repository = "https://github.com/samjkent/gc9a01"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
embedded-hal = { version = "1.0.0" }
defmt = "0.3"